--- a/Client/index.html
+++ b/Client/index.html
@@ -22,6 +22,13 @@
 	var jarvis = new Asistente();
 	jarvis.buscarLib("Acceso").op = new Acceso;
 	jarvis.usarLib('Rhino');
-		
+	var ID = setInterval(function arranque(){
+		if(jarvis.verificarDependencias('Rhino')){
+			clearInterval(ID);		
+			UI = new Arquitecto();
+			UI.configure();
+			jarvis.buscarLib("Acceso").op.crearFormulario();
+		}
+	})	
 </script>
 </html>
