conexion con servidor

--- a/Client/index.html
+++ b/Client/index.html
@@ -19,6 +19,7 @@
 	<div contenedor></div>
 </body>
 <script type="text/javascript">
+	//BUG: error en conexion de base de datos
 	var jarvis = new Asistente();
 	jarvis.usarLib('torque');
 	jarvis.buscarLib("Acceso").op = new Acceso;
