--- a/Client/index.html
+++ b/Client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FrasesWEB</title>
+	<title>CloudRhino</title>
 <!-- Estilos externos //google -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans|Oswald' rel='stylesheet' type='text/css' nombre = "fuente" type="text/css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" nombre = "gooIconos" type="text/css">
@@ -22,6 +22,7 @@
 	//BUG: error en conexion de base de datos
 	var jarvis = new Asistente();
 	jarvis.usarLib('torque');
+	jarvis.usarLib('Session');
 	jarvis.buscarLib("Acceso").op = new Acceso;
 	jarvis.usarLib('Rhino');
 	var ID = setInterval(function arranque(){
