--- a/Client/index.html
+++ b/Client/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FrasesWEB</title>
+	<title>CloudRhino</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+<!-- Estilos externos //google -->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans|Oswald' rel='stylesheet' type='text/css' nombre = "fuente" type="text/css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" nombre = "gooIconos" type="text/css">
 <!-- Librerias Basicas -->
 	<meta charset="UTF-8">
 	<script type="text/javascript" nombre='motorLib' src='control/motorLib.js'>	</script>
-	<script type="text/javascript" nombre='cuerpo' src='vistas/cuerpo.js'></script>	
-	<script type="text/javascript" nombre='Acceso' src='vistas/acceso.js'></script>	
-	<script type="text/javascript" nombre='Socket.io' src='/socket.io/socket.io.js'></script>	
-	<link rel="stylesheet" type="text/css" href="vistas/css/icons.css" nombre="Iconos">
+	<script type="text/javascript" nombre='Socket.io' src='/socket.io/socket.io.js'></script>
 	<link rel="stylesheet" type="text/css" href="vistas/css/cuerpo.css" nombre="estilos cuerpo">
+	<link rel="stylesheet" type="text/css" href="vistas/css/login.css" nombre="estilos login">
+	<link rel="stylesheet" type="text/css" href="lib/Rhino/css/Rhino.css" nombre="estilos rhino">
 </head>
 
 <body>
-
+	<div contenedor></div>
 </body>
 <script type="text/javascript">
-	var jarvis = new Asistente();
-	jarvis.buscarLib("Acceso").op = new Acceso;	
-	jarvis.construc= new Constructor;
-	jarvis.construc.arranque();
-		
+	//BUG: error en conexion de base de datos
+	var jarvis = new Asistente({
+		LibreriasArranque:['torque','Rhino','Cuerpo','Session','Acceso'],
+		onLoad: function(){
+			UI = new Arquitecto();
+			UI.configure();
+			torque = new Motor('acceso');
+			jarvis.buscarLib("Acceso").op = new Acceso;
+			jarvis.buscarLib("Acceso").op.crearFormulario();
+		}
+	});
 </script>
 </html>
