--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>CloudRhino</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, height=device-height">
 <!-- Estilos externos //google -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans|Oswald' rel='stylesheet' type='text/css' nombre = "fuente" type="text/css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" nombre = "gooIconos" type="text/css">
